--- a/ml-consulta-main/package.json
+++ b/ml-consulta-main/package.json
@@ -4,18 +4,19 @@
   "description": "clon de mercadolibre para DH en clase de consulta nro 1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodemon src/app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/DiegoMMF/ml-consulta.git"
+    "url": "git+https://github.com/camimtin/mercadoLiebreCamila.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/DiegoMMF/ml-consulta/issues"
+    "url": "https://github.com/camimtin/mercadoLiebreCamila.git"
   },
-  "homepage": "https://github.com/DiegoMMF/ml-consulta#readme",
+  "homepage": "https://github.com/camimtin/mercadoLiebreCamila.git",
   "dependencies": {
     "express": "^4.17.1"
   }
